feat: nft id list method
